--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@types/mongoose": "^5.11.97",
     "express": "^4.19.2",
     "framer-motion": "^11.2.11",
+    "lucide-react": "^0.407.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "next-cloudinary": "^6.6.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-grid-gallery": "^1.0.1",
+    "react-hook-inview": "^4.5.1",
+    "vanilla-tilt": "^1.8.1",
+    "yet-another-react-lightbox": "^3.21.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
